# rag

./: .gitignore  Caddyfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  app.py  env.example  pyproject.toml
backend/app/: app.py  config.py
backend/app/models/: completion.py
backend/app/routes/: completions.py
backend/app/services/: file_processing.py  handlers.py  papers.py  vector_store.py
backend/app/utils/: auth.py  logger.py
deployment/: docker-compose.yml  env.example  run_model.sh
frontend/: bun.lockb  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/test/: page.tsx
frontend/src/components/: CategorySelector.tsx  MessageBubble.tsx  PromptForm.tsx  TypingIndicator.tsx
frontend/src/context/: CategoryContext.tsx
ingestion-pipeline/: .env.example  category_indexer.py  knowledgebase_test.py  medical.ipynb  new_collections.py  parallel_proc.ipynb  pyproject.toml  test-ingestion.ipynb  test_medical.ipynb  test_pipeline.ipynb
