[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astrapy>=1.5.2",
    "fastapi[standard]>=0.115.8",
    "llama-index-vector-stores-astra-db>=0.4.0",
    "llama-index>=0.12.15",
    "llama-index-embeddings-ollama>=0.5.0",
    "llama-index-llms-groq>=0.3.1",
    "google-genai>=0.8.0",
    "llama-index-readers-papers>=0.3.0",
]
