[project]
name = "ingestion-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astrapy>=1.5.2",
    "llama-index-vector-stores-astra-db>=0.4.0",
    "llama-index>=0.12.15",
    "llama-index-embeddings-ollama>=0.5.0",
    "ipykernel>=6.29.5",
    "python-dotenv>=1.0.1",
    "llama-index-llms-openai>=0.3.15",
    "llama-index-llms-groq>=0.3.1",
]
